# cvmmap-python-client

./: .gitignore  README.md  pyproject.toml
examples/: record_client.py  sync_monitor.py  view_color_depth.py
src/cvmmap/: __init__.py  control_pb2.py  msg.py  nats_subjects.py  shm.py
tests/: abi_v2_contract_checklist.md  test_import_and_protocol.py  test_record_client_example.py
tests/fixtures/cvmmap_core/: uri_targets.json
tests/fixtures/protocol/: README.md  v1_valid_metadata.hex  v1_valid_payload.hex  v2_left_depth_confidence_valid_metadata.hex  v2_left_depth_confidence_valid_payload.hex  v2_left_depth_valid_metadata.hex  v2_left_depth_valid_payload.hex  v2_left_only_valid_metadata.hex  v2_malformed_descriptor_metadata.hex  v2_malformed_descriptor_payload.hex
